--- a/docs/samples/tests/razor/_Imports.razor
+++ b/docs/samples/tests/razor/_Imports.razor
@@ -1,11 +1,12 @@
 @namespace Bunit.Docs.Samples
+@using global::Xunit
 
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
+@using AngleSharp.Dom
 @using Bunit
 @using Bunit.Mocking.JSInterop
-@using global::Xunit
-@using AngleSharp.Dom
+@using Xunit
