Docs: last bits of passing parameters

--- a/docs/samples/tests/razor/AllSnapshotTestParameters.razor
+++ b/docs/samples/tests/razor/AllSnapshotTestParameters.razor
@@ -1,3 +1,5 @@
+@inherits TestComponentBase
+
 <SnapshotTest Setup=@Setup
               SetupAsync=@SetupAsync
               Description="Description of test"
