--- a/sample/tests/SnapshotTests/AlertSnapshotTest.razor
+++ b/sample/tests/SnapshotTests/AlertSnapshotTest.razor
@@ -1,6 +1,6 @@
 ﻿@inherits TestComponentBase
 
-<SnapshotTest Setup="(test) => test.Services.AddMockJsRuntime()"
+<SnapshotTest Setup="(test) => test.Services.AddMockJSRuntime()"
               Description="Alert renders correctly when all input is provided">
     <TestInput>
         <Alert Header="It is time to focus on Blazor">
