Update sample project to use new folder for test doubles

--- a/sample/tests/_Imports.razor
+++ b/sample/tests/_Imports.razor
@@ -2,7 +2,7 @@
 @using Microsoft.Extensions.DependencyInjection
 
 @using Bunit
-@using Bunit.Mocking.JSInterop
+@using Bunit.TestDoubles.JSInterop
 @using SampleApp
 @using SampleApp.Data
 @using SampleApp.Components
