--- a/docs/site/templates/bunit/styles/main.css
+++ b/docs/site/templates/bunit/styles/main.css
@@ -1,123 +1,136 @@
 .navbar-brand {
-    line-height: 50px;
-    margin-right: 15px !important;
+  line-height: 50px;
+  margin-right: 15px !important;
 }
 
-    .navbar-brand > img {
-        display: inline-block;
-        margin-top: -8px;
-        margin-right: 5px;
-    }
+.navbar-brand>img {
+  display: inline-block;
+  margin-top: -8px;
+  margin-right: 5px;
+}
 
-    .navbar-brand > span {
-        font-weight: 600;
-        font-size: 16px;
-        color: #fff;
-    }
+.navbar-brand>span {
+  font-weight: 600;
+  font-size: 16px;
+  color: #fff;
+}
 
 .sidetoc {
-    top: 142px;
+  top: 142px;
 }
 
 #toc {
-    margin: 0;
+  margin: 0;
 }
 
-    #toc .nav > li > .expand-stub {
-        display: none;
-    }
+#toc .nav>li>.expand-stub {
+  display: none;
+}
 
 .nav.level2 {
-    display: block !important;
-    margin-left: 0;
+  display: block !important;
+  margin-left: 0;
 }
 
 .body-content {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 .article {
-    margin-top: 80px;
+  margin-top: 80px;
 }
 
 .sideaffix {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .tabGroup {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
-    .tabGroup section[role="tabpanel"] {
-        border: none;
-        padding: 0px;
-    }
+.tabGroup section[role="tabpanel"] {
+  border: none;
+  padding: 0px;
+}
 
-        .tabGroup section[role="tabpanel"] > pre {
-            margin-left: 0;
-            margin-right: 0;
-        }
+.tabGroup section[role="tabpanel"]>pre {
+  margin-left: 0;
+  margin-right: 0;
+}
 
-            .tabGroup section[role="tabpanel"] > pre:last-child {
-                margin-bottom: 0;
-            }
+.tabGroup section[role="tabpanel"]>pre:last-child {
+  margin-bottom: 0;
+}
 
-    .tabGroup .alert {
-        margin-bottom: 0;
-    }
+.tabGroup .alert {
+  margin-bottom: 0;
+}
 
 pre {
-    border-radius: 4px;
-    border: none;
+  border-radius: 4px;
+  border: none;
 }
 
-    pre code {
-        white-space: pre;
-    }
+pre code {
+  white-space: pre;
+}
 
 code[name] {
-    display: block;
-    position: relative;
+  display: block;
+  position: relative;
 }
 
-    code[name]:before {
-        content: attr(name);
-        position: absolute;
-        top: 0;
-        right: 0;
-        font-style: italic;
-        text-align: right;
-        color: #c5c5c5;
-        background: rgba(255,255,255, 0.7);
-        border-radius: 4px;
-        padding: 0 6px;
-    }
+code[name]:before {
+  content: attr(name);
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-style: italic;
+  text-align: right;
+  color: #c5c5c5;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 4px;
+  padding: 0 6px;
+}
 
 @media (max-width: 900px) {
-    code[name] {
-        padding-top: 1.5em;
-    }
+  code[name] {
+    padding-top: 1.5em;
+  }
 }
 
-.alert-info code,
-.alert-info a.xref {
-    background-color: inherit;
-    color: #131ed2;
+.alert-info code, .alert-info a.xref {
+  background-color: inherit;
+  color: #131ed2;
 }
 
 a.xref[href*="/api/"] {
-    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
-    padding: 2px 4px;
-    font-size: 90%;
-    color: #c7254e;
-    background-color: #f9f2f4;
-    border-radius: 4px;
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  padding: 2px 4px;
+  font-size: 90%;
+  color: #337ab7;
+  background-color: #f1f2f3;
+  border-radius: 4px;
 }
 
-    a.xref[href*="/api/"]:hover {
-        background-color: inherit;
-        text-decoration: underline;
-    }
+a.xref[href*="/api/"]:hover {
+  background-color: inherit;
+  text-decoration: underline;
+}
+
+a code {
+  text-decoration: none;
+}
+
+a code:hover {
+  background-color: inherit;
+  text-decoration: underline;
+}
+
+h1 a h2 a, h3 a, h4 a, h5 a, h6 a {
+  color: rgb(51, 51, 51);
+  background-color: transparent;
+}
 
 footer small {
   font-size: 0.9rem;
