Added SetAuthorizing method and state implementation to get AuthorizeView to behave as expected. Updated sample code too.

--- a/docs/samples/components/UserInfo.razor
+++ b/docs/samples/components/UserInfo.razor
@@ -4,17 +4,21 @@
 @if (isAuthenticated)
 {
   <h1>Welcome @userName</h1>
-  <CascadingAuthenticationState>
-	  <AuthorizeView>
-		  <Authorized>
-			  <p>State: Authorized</p>
-		  </Authorized>
-		  <NotAuthorized>
-			  <p>State: Not authorized</p>
-		  </NotAuthorized>
-	  </AuthorizeView>
-  </CascadingAuthenticationState>
 }
+  <CascadingAuthenticationState>
+      <AuthorizeView>
+          <Authorized>
+              <p>State: Authorized</p>
+          </Authorized>
+          <Authorizing>
+              <p>State: Authorizing</p>
+          </Authorizing>
+          <NotAuthorized>
+              <p>State: Not authorized</p>
+          </NotAuthorized>
+      </AuthorizeView>
+  </CascadingAuthenticationState>
+
 @if (!isAuthenticated)
 {
   <h1>Please log in!</h1>
