--- a/src/bunit.testassets/SampleComponents/SimpleAuthView.razor
+++ b/src/bunit.testassets/SampleComponents/SimpleAuthView.razor
@@ -5,6 +5,9 @@
 		<Authorized>
 			Authorized!
 		</Authorized>
+		<Authorizing>
+			Authorizing...
+		</Authorizing>
 		<NotAuthorized>
 			Not authorized?
 		</NotAuthorized>
