Added negative test for AuthorizeView without defined claims.

--- a/src/bunit.testassets/SampleComponents/SimpleAuthViewWithClaims.razor
+++ b/src/bunit.testassets/SampleComponents/SimpleAuthViewWithClaims.razor
@@ -6,21 +6,29 @@
 	<AuthorizeView>
 		<div>Authorized!</div>
 		<div>Name: @userName</div>
-		<div>Email: @userEmail</div>
-		<div>Id: @userId</div>
+		@if (hasUserEmail)
+		{
+			<div>Email: @userEmail</div>
+		}
+		@if (hasUserId)
+		{
+			<div>Id: @userId</div>
+		}
 	</AuthorizeView>
 </CascadingAuthenticationState>
 
 @code {
 	string userName = "";
-	string userEmail = "";
-	string userId = "";
+	string? userEmail = "";
+	string? userId = "";
+	bool hasUserEmail => userEmail != null;
+	bool hasUserId => userId != null;
 
 	protected override async Task OnParametersSetAsync()
 	{
 		var state = await AuthenticationStateProvider.GetAuthenticationStateAsync();
 		userName = state.User.Identity.Name;
-		userEmail = state.User.FindFirst(ClaimTypes.Email).Value;
-		userId = state.User.FindFirst(ClaimTypes.Sid).Value;
+		userEmail = state.User.FindFirst(ClaimTypes.Email)?.Value;
+		userId = state.User.FindFirst(ClaimTypes.Sid)?.Value;
 	}
 }
