--- a/docs/samples/components/UserRights.razor
+++ b/docs/samples/components/UserRights.razor
@@ -1,10 +1,18 @@
 @using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Claims
+@using System.Globalization
 
 <CascadingAuthenticationState>
   <AuthorizeView>
-    <h1>Hi @context.User.Identity.Name, you have these rights:</h1>
+    <h1>Hi @context.User.Identity.Name, you have these claims and rights:</h1>
   </AuthorizeView>
   <ul>
+    <AuthorizeView>
+      @foreach (var claim in @context.User.FindAll(x => x.Type != ClaimTypes.Name))
+      {
+        <li>@GetClaimName(claim): @claim.Value</li>
+      }
+    </AuthorizeView>
     <AuthorizeView Roles="superuser">
       <li>You have the role SUPER USER</li>
     </AuthorizeView>  
@@ -16,3 +24,13 @@
     </AuthorizeView>
   </ul>
 </CascadingAuthenticationState>
+
+@code 
+{
+  private static string GetClaimName(Claim claim)
+  {
+    var claimType = new Uri(claim.Type);
+    var name = claimType.Segments.Last();
+    return CultureInfo.InvariantCulture.TextInfo.ToTitleCase(name);
+  }
+}
