--- a/docs/samples/tests/razor/_Imports.razor
+++ b/docs/samples/tests/razor/_Imports.razor
@@ -8,5 +8,5 @@
 @using Microsoft.Extensions.DependencyInjection
 @using AngleSharp.Dom
 @using Bunit
-@using Bunit.Mocking.JSInterop
+@using Bunit.TestDoubles.JSInterop
 @using Xunit
