Switched to C# 9 compile

--- a/tests/bunit.testassets/SampleComponents/SimpleWithTemplate.razor
+++ b/tests/bunit.testassets/SampleComponents/SimpleWithTemplate.razor
@@ -1,13 +1,10 @@
-﻿@typeparam T
+@typeparam T
 @foreach (var d in Data)
 {
-    if (Template is { })
-    {
-        @Template(d);
-    }
+	@Template?.Invoke(d);
 }
 @code
 {
-    [Parameter] public RenderFragment<T>? Template { get; set; }
-    [Parameter] public IReadOnlyList<T> Data { get; set; } = Array.Empty<T>();
+	[Parameter] public RenderFragment<T>? Template { get; set; }
+	[Parameter] public IReadOnlyList<T> Data { get; set; } = Array.Empty<T>();
 }
