Update template with new test doubles namespace

--- a/src/bunit.template/template/_Imports.razor
+++ b/src/bunit.template/template/_Imports.razor
@@ -4,5 +4,5 @@
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
 @using Bunit
-@using Bunit.TestDoubles.JSInterop
+@using Bunit.TestDoubles
 @using Xunit
