Added sponsor button to website

--- a/docs/site/templates/bunit/styles/main.css
+++ b/docs/site/templates/bunit/styles/main.css
@@ -191,3 +191,9 @@ footer small {
 .contribution {
   margin-top: 1rem;
 }
+
+#sponsor-button {
+  display: inline-block;
+  padding-top: 10px;
+  padding-left: 20px;
+}
