--- a/tests/bunit.testassets/_Imports.razor
+++ b/tests/bunit.testassets/_Imports.razor
@@ -2,7 +2,8 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
+@using Microsoft.Extensions.Logging
+@using Microsoft.JSInterop
 @using Bunit.TestAssets.SampleComponents
 @using Bunit.TestAssets.SampleComponents.Data
