--- a/tests/bunit.testassets/BlazorE2E/DispatchingComponent.razor
+++ b/tests/bunit.testassets/BlazorE2E/DispatchingComponent.razor
@@ -1,3 +1,5 @@
+@inject ILogger<DispatchingComponent> Logger
+
 <h1>Dispatching</h1>
 
 <p>
@@ -51,17 +53,29 @@
 
     async Task RunAsyncWorkWithDispatch()
     {
+        Logger.LogDebug("Before first Task.Delay(1)");
+
         await Task.Delay(1).ConfigureAwait(false);
 
         result = "First";
+
+        Logger.LogDebug("Before InvokeAsync");
 
         var invokeTask = InvokeAsync(async () =>
         {
             // When the sync context is idle, queued work items start synchronously
             result += " Second";
+
+            Logger.LogDebug("Inside InvokeAsync, before Task.Delay(250)");
+
             await Task.Delay(250);
+
+            Logger.LogDebug("Inside InvokeAsync, after Task.Delay(250)");
+
             result += " Fourth";
         });
+
+        Logger.LogDebug("After InvokeAsync");
 
         result += " Third";
         await invokeTask;
