Refactored Fixture and Snapshot components into separate project

--- a/tests/bunit.web.testcomponents.tests/_Imports.razor
+++ b/tests/bunit.web.testcomponents.tests/_Imports.razor
@@ -7,6 +7,7 @@
 @using Bunit
 @using Bunit.RazorTesting
 @using Bunit.Rendering
+@using Bunit.TestDoubles
 @using Bunit.TestAssets.SampleComponents
 @using Bunit.TestAssets.SampleComponents.Data
 @using Shouldly
