Updated docs article on writing tests in .cs and .razor files

--- a/docs/samples/tests/mstest/_Imports.razor
+++ b/docs/samples/tests/mstest/_Imports.razor
@@ -1,8 +1,8 @@
-﻿@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
 @using AngleSharp.Dom
 @using Bunit
 @using Bunit.TestDoubles
-@using Xunit
+@using Microsoft.VisualStudio.TestTools.UnitTesting
