--- a/docs/samples/tests/nunit/_Imports.razor
+++ b/docs/samples/tests/nunit/_Imports.razor
@@ -1,12 +1,8 @@
-@namespace Bunit.Docs.Samples
-@using global::Xunit
-
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
+﻿@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.DependencyInjection
 @using AngleSharp.Dom
 @using Bunit
 @using Bunit.TestDoubles
-@using Xunit
+@using NUnit.Framework
