--- a/docs/samples/tests/razor/TemplateParams2Test.razor
+++ b/docs/samples/tests/razor/TemplateParams2Test.razor
@@ -1,14 +1,16 @@
 @code
 {
+#if NET6_0
   [Fact]
   public void Test()
   {
     using var ctx = new TestContext();
 
-    // var cut = ctx.Render(@<TemplateParams Items=@(new string[]{ "Foo", "Bar", "Baz" }) TItem="string">
-    //                         <Template>
-    //                           <Item Value=@context></Item>
-    //                         </Template>
-    //                       </TemplateParams>);
+    var cut = ctx.Render(@<TemplateParams Items=@(new string[]{ "Foo", "Bar", "Baz" }) TItem="string">
+                            <Template>
+                              <Item Value=@context></Item>
+                            </Template>
+                          </TemplateParams>);
   }
+#endif
 }
