--- a/docs/samples/tests/razor/RenderFragmentParams2Test.razor
+++ b/docs/samples/tests/razor/RenderFragmentParams2Test.razor
@@ -6,7 +6,7 @@
     using var ctx = new TestContext();
 
     var cut = ctx.Render(@<RenderFragmentParams>
-                            <Content><Alert /></Content>
+                            <Content><Counter /></Content>
                           </RenderFragmentParams>);
   }
 }
