--- a/tests/bunit.testassets/SampleComponents/ClickEventBubbling.razor
+++ b/tests/bunit.testassets/SampleComponents/ClickEventBubbling.razor
@@ -1,6 +1,6 @@
-<header @onclick="(evt) => HeaderClickCount++">
+<header @onclick="(_) => HeaderClickCount++">
 	<h1>
-		<span @onclick="(evt) => SpanClickCount++">CLICK ME</span>
+		<span @onclick="(_) => SpanClickCount++">CLICK ME</span>
 	</h1>
 	<button>CLICK ME</button>
 </header>
