--- a/tests/bunit.web.testcomponents.tests/SampleComponents/TestCasesWithWeirdLineBreaks.razor
+++ b/tests/bunit.web.testcomponents.tests/SampleComponents/TestCasesWithWeirdLineBreaks.razor
@@ -5,4 +5,4 @@
 	<ExpectedOutput></ExpectedOutput>
 </SnapshotTest>
 <Fixture
-Test="f => { }"><ComponentUnderTest></ComponentUnderTest></Fixture>
+Test="_ => { }"><ComponentUnderTest></ComponentUnderTest></Fixture>
