--- a/tests/bunit.testassets/SampleComponents/PrintCurrentUrl.razor
+++ b/tests/bunit.testassets/SampleComponents/PrintCurrentUrl.razor
@@ -1,18 +1,19 @@
 @implements IDisposable
 @inject NavigationManager NavMan
-@url
+
+<button @onclick="() => NavMan.NavigateTo(GoToUrl)"></button>
+<p>@url</p>
+
 @code {
-    private string url;
+	private string url;
+
+	[Parameter] public string GoToUrl { get; set; } = string.Empty;
 
     protected override void OnInitialized()
-	{
-        NavMan.LocationChanged += OnLocationChanged;
-	}
+		=> NavMan.LocationChanged += OnLocationChanged;
 
-    public void Dispose()
-    {
-        NavMan.LocationChanged -= OnLocationChanged;
-    }
+	public void Dispose()
+		=> NavMan.LocationChanged -= OnLocationChanged;
 
     private	void OnLocationChanged(object? sender, LocationChangedEventArgs e)
 	{
