fix: Implemented PR Review (stable API, smaller test, indention correction)

--- a/tests/bunit.testassets/SampleComponents/DispatcherException.razor
+++ b/tests/bunit.testassets/SampleComponents/DispatcherException.razor
@@ -1,23 +1,9 @@
-﻿<table>
-	<tbody>
-	@foreach (var item in entryList)
-	{
-		<tr>
-			<td @onclick="() => { }">
-				<button aria-label="@item" @onclick="() => DeleteButton(item)">@item</button>
-			</td>
-		</tr>
-	}
-	</tbody>
-</table>
+﻿@if(show)
+{
+	<div @onclick="() => { }">
+		<button  @onclick="() => show = false">Text</button>
+	</div>
+}
 @code {
-	private readonly List<string> entryList = new()
-	{
-		"First", "Second"
-	};
-
-	private void DeleteButton(string toRemove)
-	{
-		entryList.Remove(toRemove);
-	}
+	bool show = true;
 }
