--- a/src/bunit.template/template/CounterRazorTests.razor
+++ b/src/bunit.template/template/CounterRazorTests.razor
@@ -1,3 +1,6 @@
+@*#if (testFramework_mstest)*@
+@attribute [TestClass]
+@*#endif*@
 @inherits TestContext
 
 These tests are written entirely in razor and C# syntax.
@@ -5,7 +8,13 @@ These tests are written entirely in razor and C# syntax.
 Learn more at https://bunit.dev/docs/getting-started/writing-tests.html#creating-basic-tests-in-razor-files
 
 @code {
-	[Fact]
+@*#if (testFramework_xunit)*@
+    [Fact]
+@*#elif (testFramework_nunit)*@
+    [Test]
+@*#elif (testFramework_mstest)*@
+    [TestMethod]
+@*#endif*@
 	public void CounterStartsAtZero()
 	{
 		// Arrange
@@ -14,8 +23,13 @@ Learn more at https://bunit.dev/docs/getting-started/writing-tests.html#creating
 		// Assert that content of the paragraph shows counter at zero
 		cut.Find("p").MarkupMatches(@<p>Current count: 0</p>);
 	}
-
-	[Fact]
+@*#if (testFramework_xunit)*@
+    [Fact]
+@*#elif (testFramework_nunit)*@
+    [Test]
+@*#elif (testFramework_mstest)*@
+    [TestMethod]
+@*#endif*@
 	public void ClickingButtonIncrementsCounter()
 	{
 		// Arrange
