feat: Support multiple test frameworks in bUnit test template (#129) (#625)
* feat: Support multiple test frameworks in bUnit test template

Add support for MSTest and NUnit test framweworks in bUnit test template

refs: #129

* update verification.yml to install bunit template once

* - add BunitTestContext to NUnit and MSTest template variations
- inherit from BunitTestContext in NUnit and MSTest template variations
- include missing namespace imports in _Imports.razor

Co-authored-by: Egil Hansen <egil@assimilated.dk>

--- a/src/bunit.template/template/_Imports.razor
+++ b/src/bunit.template/template/_Imports.razor
@@ -3,4 +3,10 @@
 @using Microsoft.Extensions.DependencyInjection
 @using Bunit
 @using Bunit.TestDoubles
+@*#if (testFramework_xunit)*@
 @using Xunit
+@*#elif (testFramework_nunit)*@
+@using NUnit.Framework
+@*#elif (testFramework_mstest)*@
+@using Microsoft.VisualStudio.TestTools.UnitTesting
+@*#endif*@
