--- a/src/bunit.template/template/CounterRazorTests.razor
+++ b/src/bunit.template/template/CounterRazorTests.razor
@@ -1,11 +1,24 @@
+@*#if (testFramework_xunit)*@
 @inherits TestContext
+@*#elif (testFramework_nunit)*@
+@inherits BunitTestContext
+@*#elif (testFramework_mstest)*@
+@attribute [TestClass]
+@inherits BunitTestContext
+@*#endif*@
 
 These tests are written entirely in razor and C# syntax.
 
 Learn more at https://bunit.dev/docs/getting-started/writing-tests.html#creating-basic-tests-in-razor-files
 
 @code {
-	[Fact]
+@*#if (testFramework_xunit)*@
+    [Fact]
+@*#elif (testFramework_nunit)*@
+    [Test]
+@*#elif (testFramework_mstest)*@
+    [TestMethod]
+@*#endif*@
 	public void CounterStartsAtZero()
 	{
 		// Arrange
@@ -14,8 +27,13 @@ Learn more at https://bunit.dev/docs/getting-started/writing-tests.html#creating
 		// Assert that content of the paragraph shows counter at zero
 		cut.Find("p").MarkupMatches(@<p>Current count: 0</p>);
 	}
-
-	[Fact]
+@*#if (testFramework_xunit)*@
+    [Fact]
+@*#elif (testFramework_nunit)*@
+    [Test]
+@*#elif (testFramework_mstest)*@
+    [TestMethod]
+@*#endif*@
 	public void ClickingButtonIncrementsCounter()
 	{
 		// Arrange
