Extended test scenario and documentation

--- a/tests/bunit.testassets/SampleComponents/DisposeComponents/ChildDispose.razor
+++ b/tests/bunit.testassets/SampleComponents/DisposeComponents/ChildDispose.razor
@@ -1,9 +1,7 @@
 ﻿@implements IDisposable
-<h1>Hello World</h1>
 @code {
-	public static bool WasDisposed;
 	public void Dispose()
 	{
-		WasDisposed = true;
+		ParentDispose.CallStack.Add(nameof(ChildDispose));
 	}
 }
