fix: update tests to not use static fields/properties

--- a/tests/bunit.testassets/SampleComponents/DisposeComponents/ChildDispose.razor
+++ b/tests/bunit.testassets/SampleComponents/DisposeComponents/ChildDispose.razor
@@ -1,12 +1,14 @@
-﻿@implements IDisposable
+@implements IDisposable
 <h2>Test</h2>
 @code {
+	[CascadingParameter]
+	public ICollection<string> CallStack { get; set; } = Array.Empty<string>();
 
 	[Parameter]
 	public string MessageToAdd { get; set; } = nameof(ChildDispose);
 
 	public void Dispose()
 	{
-		ParentDispose.CallStack.Add(MessageToAdd);
+		CallStack.Add(MessageToAdd);
 	}
 }
