--- a/tests/bunit.testassets/SampleComponents/ThrowsOnParameterSet.razor
+++ b/tests/bunit.testassets/SampleComponents/ThrowsOnParameterSet.razor
@@ -3,6 +3,8 @@
 	private string value = string.Empty;
 
 	[Parameter]
+	// Temporary solution as the analyzer seems to ignore the .editorconfig
+#pragma warning disable BL0007 // Component parameter should be auto
 	public string Value
 	{
 		get => value;
@@ -11,4 +13,5 @@
 			throw new ArgumentOutOfRangeException(nameof(value), $"{nameof(value)} is invalid");
 		}
 	}
+#pragma warning restore BL0007 // Component parameter should be auto property
 }
