feat!: Simplified Click and DoubleClick overloads

--- a/docs/samples/tests/razor/ClickMeTest.razor
+++ b/docs/samples/tests/razor/ClickMeTest.razor
@@ -10,7 +10,7 @@
 
     // Act
     buttonElement.Click();
-    buttonElement.Click(detail: 3, ctrlKey: true);
+    buttonElement.Click(new MouseEventArgs { Detail = 3, CtrlKey = true });
     buttonElement.Click(new MouseEventArgs());
 
     // Assert
